force-app/main/default/objects/Proposal__c/fields/Client_Budget_Band__c.field-meta.xml
<CustomField>
    <fullName>Client_Budget_Band__c</fullName>
    <label>Client Budget Band</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 100K</fullName>
            </value>
            <value>
                <fullName>100K–250K</fullName>
            </value>
            <value>
                <fullName>250K+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>