force-app/main/default/objects/Proposal__c/fields/Confirmed_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Headcount__c</fullName>
    <label>Confirmed Headcount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>