force-app/main/default/objects/Proposal__c/fields/Confirmed_Venue_Preference__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Venue_Preference__c</fullName>
    <inlineHelpText>Please Add your Venue Preference</inlineHelpText>
    <label>Confirmed Venue Preference</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>