force-app/main/default/objects/Proposal__c/fields/Event_Type_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Confirmed__c</fullName>
    <label>Event Type Confirmed</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Milestone Birthday</fullName>
            </value>
            <value>
                <fullName>Private Celebration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>