force-app/main/default/objects/Proposal__c/fields/Must_Avoid_Elements__c.field-meta.xml
<CustomField>
    <fullName>Must_Avoid_Elements__c</fullName>
    <label>Must Avoid Elements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>