force-app/main/default/objects/Proposal__c/fields/Required_Vendor_Categories__c.field-meta.xml
<CustomField>
    <fullName>Required_Vendor_Categories__c</fullName>
    <label>Required Vendor Categories</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>A/V</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Décor</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>